After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 687967 - Don't crash if symbolic icons not available in theme
Don't crash if symbolic icons not available in theme
Status: RESOLVED FIXED
Product: seahorse
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Seahorse Maintainer
Seahorse Maintainer
Depends on:
Blocks:
 
 
Reported: 2012-11-09 10:05 UTC by Stef Walter
Modified: 2012-11-09 16:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Use fallback icons if symbolic icons are not available (1.65 KB, patch)
2012-11-09 10:47 UTC, Stef Walter
committed Details | Review

Description Stef Walter 2012-11-09 10:05:09 UTC
Seahorse crashes if symbolic icons for lock/unlock are not available in theme.

[New LWP 20946]
[New LWP 20947]
[New LWP 20948]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/libthread_db.so.1".
Core was generated by `/usr/bin/seahorse'.
Program terminated with signal 11, Segmentation fault.

Thread 1 (Thread 0xb76ef880 (LWP 20946))

  • #0 gtk_icon_info_load_symbolic_for_context
    at gtkicontheme.c line 3364
  • #1 ensure_sidebar_pixbufs
    at seahorse-sidebar.c line 208
  • #2 on_cell_renderer_action_icon
    at seahorse-sidebar.c line 579
  • #3 apply_cell_attributes
    at gtkcellarea.c line 1284
  • #4 g_hash_table_foreach
    at ghash.c line 1524
  • #5 gtk_cell_area_real_apply_attributes
    at gtkcellarea.c line 1313
  • #6 gtk_cell_area_box_apply_attributes
    at gtkcellareabox.c line 1317
  • #7 _gtk_marshal_VOID__OBJECT_BOXED_BOOLEAN_BOOLEANv
    at gtkmarshalers.c line 4874
  • #8 g_type_class_meta_marshalv
    at gclosure.c line 997
  • #9 _g_closure_invoke_va
    at gclosure.c line 840
  • #10 g_signal_emit_valist
    at gsignal.c line 3211
  • #11 g_signal_emit
    at gsignal.c line 3356
  • #12 gtk_cell_area_apply_attributes
    at gtkcellarea.c line 2362
  • #13 gtk_tree_view_column_cell_set_cell_data
    at gtktreeviewcolumn.c line 2872
  • #14 validate_row
    at gtktreeview.c line 6107
  • #15 validate_visible_area
    at gtktreeview.c line 6430
  • #16 do_presize_handler
    at gtktreeview.c line 6786
  • #17 presize_handler_callback
    at gtktreeview.c line 6809
  • #18 gdk_threads_dispatch
    at gdk.c line 763
  • #19 g_idle_dispatch
    at gmain.c line 4657
  • #20 g_main_dispatch
    at gmain.c line 2539
  • #21 g_main_context_dispatch
    at gmain.c line 3075
  • #22 g_main_context_iterate
    at gmain.c line 3146
  • #23 g_main_loop_run
    at gmain.c line 3340
  • #24 gtk_main
    at gtkmain.c line 1161
  • #25 main
    at seahorse-main.c line 106

Downstream: https://bugzilla.redhat.com/show_bug.cgi?id=872879
Comment 1 Stef Walter 2012-11-09 10:47:58 UTC
Created attachment 228539 [details] [review]
Use fallback icons if symbolic icons are not available

 * Avoids crash