Use fallback icons if symbolic icons are not available

* Avoids crash

https://bugzilla.gnome.org/show_bug.cgi?id=687967